--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./CSS/style.css">
 	<script src="./js/storymaker.js" defer></script>
 
 </head>
